--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,13 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
+
+# skeleton
+android
+build
+ios
+macos
+web
+.vscode
+
+lib/firebase_options.dart
